update until lesson 17

--- a/Lesson15/Lesson15.html
+++ b/Lesson15/Lesson15.html
@@ -29,16 +29,28 @@ col.firstcolumn {
 }
 
 
-#table5 {border-collapse: seperate; border-spacing: 0px; border: 2px solid black; caption-side:top;}
+#table5 {
+  border-collapse: seperate; 
+  border-spacing: 0px; 
+  border: 2px solid black; 
+  caption-side:top;}
+
 #table5 thead th{}
 #table5 thead td{}
 #table5 tfoot th{}
 #table5 tfoot td{}
 #table5 tbody th{}
-#table5 tbody td{border-width: 1px; border-style:solid; border-color: blue;}
+
+#table5 tbody td{
+  border-width: 1px; 
+  border-style:solid; 
+  border-color: blue;}
 
 
-#table6 {border-collapse: collapse;  border: 2px solid black; caption-side:top;}
+#table6 {
+  border-collapse: collapse;  
+  border: 2px solid black; 
+  caption-side:top;}
 #table6 thead{}
 #table6 tbody tr{}
 #table6 tbody td{border: 1px solid blue;}
