--- a/Lesson18/Before/Lesson18.html
+++ b/Lesson18/Before/Lesson18.html
@@ -7,8 +7,10 @@
 <body>
 
 <h1>Embedding Video in HTML5</h1>
-
-
+<!--width="960" height="540"-->
+<video src="30seconds.mp4" controls poster="poster.jpg">
+  <p>unfortunately your browser cannot play the video format. You may <a href="30seconds.mp4">Right-click this link and choose Save as</a> to download this video insted.</p>
+</video>
 
 <p>There's no video codec format standard.  Internet Explorer supports the popular H.264 codec (typically .mp4, but other formats may include H.264 as well).</p>
 
